--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,7 @@
 [submodule ".registry"]
 	path = .registry
-	url = https://github.com/r-universe-org/cran-to-git
-	shallow = true
+	url = https://github.com/sounkou-bioinfo/sounkou-bioinfo.r-universe.dev
 	branch = HEAD
+[submodule "goserveR"]
+	path = goserveR
+	url = https://github.com/sounkou-bioinfo/goServeR
