--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,9 @@
 	path = .registry
 	url = https://github.com/sounkou-bioinfo/sounkou-bioinfo.r-universe.dev
 	branch = HEAD
+[submodule "bcflib"]
+	path = bcflib
+	url = https://github.com/sounkou-bioinfo/bcflib
 [submodule "goserveR"]
 	path = goserveR
 	url = https://github.com/sounkou-bioinfo/goServeR
