--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,9 @@
 	path = .registry
 	url = https://github.com/sounkou-bioinfo/sounkou-bioinfo.r-universe.dev
 	branch = HEAD
+[submodule "RBCFLib"]
+	path = RBCFLib
+	url = https://github.com/sounkou-bioinfo/RBCFLib
 [submodule "bcflib"]
 	path = bcflib
 	url = https://github.com/sounkou-bioinfo/bcflib
