--- a/.gitmodules
+++ b/.gitmodules
@@ -28,6 +28,9 @@
 [submodule "goserveR"]
 	path = goserveR
 	url = https://github.com/sounkou-bioinfo/goServeR
+[submodule "hellomojo"]
+	path = hellomojo
+	url = https://github.com/sounkou-bioinfo/hellomojo
 [submodule "houba"]
 	path = houba
 	url = https://github.com/HervePerdry/houba
